2013-09-23 Borut Razem <borut.razem AT gmail.com>

	* packages/build.wget/Makefile: wget updated to  version 1.14

2013-09-21 Borut Razem <borut.razem AT gmail.com>

	* packages/packages.mk: use 64 bit library on 64 bit x86_64 cf-x86 machine in LDFLAGS: -L$(HOME)/local-$(HOSTNAME)/lib64
	* packages/build.popt/Makefile: popt updatetd to version 1.16
	* packages/build.gpsim/Makefile: relocate svn repository

2013-05-20 Borut Razem <borut.razem AT gmail.com>

	* packages/packages.mk: removed SF_REPOSITORY
	  packages/build.gputils/Makefile: changed package version to 1.2.0,
	  corrected file repository path

2012-12-15 Borut Razem <borut.razem AT gmail.com>

	* packages/build.wine/Makefile:
	  updated to wine 1.4.1, smart WGET
	* packages/packages.mk, packages/build.gcc/Makefile: smart WGET

2012-12-14 Borut Razem <borut.razem AT gmail.com>

	* packages/build.gcc/Makefile: updated to gcc 4.7.2

2012-10-26 Borut Razem <borut.razem AT gmail.com>

	* packages/build.gputils/Makefile: updated svn server
	* crontab.txt: added Raspbian on wizard

2012-08-04 Borut Razem <borut.razem AT gmail.com>

	* packages/build.boost/Makefile: updated to boost 1_50_0,
	  build only graph package

2012-06-25 Borut Razem <borut.razem AT gmail.com>

	* packages/build.gputils/Makefile: updated to gputils 0.14.2

2012-05-05 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* bin/dcf.sh: update to match current SourceForge specs for
	  accessing project-web and file release system areas

2012-03-30 Borut Razem <borut.razem AT gmail.com>

	* packages/build.mingw32/Makefile, packages/build.gcc/Makefile:
	  updated to gcc 4.7.0

2012-03-09 Borut Razem <borut.razem AT gmail.com>

	* packages/build.mingw32/Makefile:
	  reverted gcc to version 4.6.1 since sdcc compiled with
	  gcc 4.6.3 fails on regression tests;
	  corrected configure rule

2012-03-05 Borut Razem <borut.razem AT gmail.com>

	* packages/build.gmp_mpfr/Makefile:
	  updated to gmp 5.0.4, mpfr 3.1.0